# IP

./: main.py
voorbeeldexamen/: Audiobestand.cpp  Audiobestand.h  CMakeLists.txt  Mediaplayer.cpp  Mediaplayer.h  Time.cpp  Time.h  main.cpp
week1/: vraag1.py  vraag10.py  vraag2.py  vraag3.py  vraag4.py  vraag5.py  vraag6.py  vraag7.py  vraag8.py  vraag9.py
week10_vr/: bst.cpp  bst.h  test_binary_search_tree  test_bst
week10_wo/: linked_list.cpp  linked_list.h  queue.cpp  queue.h  test_linked_list.cpp  test_list  test_q  test_queue.cpp
week11_vr/: Geogebra.cpp  Geogebra.h  RationaleFunctie.cpp  RationaleFunctie.h  VeeltermFunctie.cpp  VeeltermFunctie.h  main.cpp  test  test_week11
week11_wo/: Actor.h  Director.h  IMDB.cpp  IMDB.h  Movie.cpp  Movie.h  Person.h  a.out  main.cpp
week12_vr/: Assistent.cpp  Assistent.h  CMakeLists.txt  Cursus.cpp  Cursus.h  Lesgever.cpp  Lesgever.h  Persoon.cpp  Persoon.h  Professor.cpp  Professor.h  Student.cpp  Student.h  main.cpp
week12_wo/: ArrayList.cpp  ArrayList.h  CMakeLists.txt  DenDerde.cpp  DenDerde.h  DenTweede.cpp  DenTweede.h  EnDeVierde.cpp  EnDeVierde.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  code.cpp  main.cpp
week13_vr/: CMakeLists.txt  Netflix.h  main.cpp
week13_vr/GeoGebra/: Cosinus.cpp  Cosinus.h  Functie.cpp  Functie.h  Geogebra.cpp  Geogebra.h  GoniometrischeFunctie.cpp  GoniometrischeFunctie.h  RationaleFunctie.cpp  RationaleFunctie.h  Sinus.cpp  Sinus.h  VeeltermFunctie.cpp  VeeltermFunctie.h  main.cpp  test  week13_2
week13_vr/studenten/: Assistent.h  Lesgever.h  Persoon.cpp  Persoon.h  Professor.h  Student.cpp  Student.h  main.cpp
week13_wo/: CMakeLists.txt  Character.cpp  Character.h  DungeonRoom.cpp  DungeonRoom.h  HeroCharacter.cpp  HeroCharacter.h  Item.cpp  Item.h  Level.cpp  Level.h  MonsterCharacter.cpp  MonsterCharacter.h  PotionItem.cpp  PotionItem.h  Room.cpp  Room.h  TerrainRoom.cpp  TerrainRoom.h  WeaponItem.cpp  WeaponItem.h  World.cpp  World.h  main.cpp
week13_wo/studenten/: Assistent.cpp  Assistent.h  Cursus.cpp  Cursus.h  Lesgever.cpp  Lesgever.h  Persoon.cpp  Persoon.h  Professor.cpp  Professor.h  Student.h  main.cpp
week2_vr/: vraag1.py  vraag10.py  vraag11.py  vraag12.py  vraag13.py  vraag2.py  vraag3.py  vraag4.py  vraag5.py  vraag6.py  vraag7.py  vraag8.py  vraag9.py
week2_wo/: vraag1.py  vraag10.py  vraag11.py  vraag2.py  vraag3.py  vraag4.py  vraag5.py  vraag6.py  vraag7.py  vraag8.py  vraag9.py
week3_vr/: vraag1.py  vraag10.py  vraag11.py  vraag2.py  vraag3.py  vraag4.py  vraag5.py  (+4 more)
(+90 files in other folders)
