cmake_minimum_required(VERSION 3.22)
project(week12_wo)

set(CMAKE_CXX_STANDARD 17)

add_executable(week12_wo main.cpp
        ArrayList.cpp
        ArrayList.h
        Stack.cpp
        Stack.h
        Queue.cpp
        Queue.h
        DenTweede.cpp
        DenTweede.h
        EnDeVierde.cpp
        EnDeVierde.h
        DenDerde.cpp
        DenDerde.h)
